Fixed buy menu alignment due to incorrect absolute position handling

--- a/Code/UI/HUD/BuyMenu.razor.scss
+++ b/Code/UI/HUD/BuyMenu.razor.scss
@@ -3,9 +3,9 @@
 BuyMenu {
     backdrop-filter: brightness( 0.5 );
     z-index: 100;
+    position: absolute;
 
     .container {
-        position: absolute;
         margin-left: auto;
         margin-right: auto;
         padding: 64px;
@@ -38,6 +38,7 @@ BuyMenu {
     }
 
     .button {
+        position: relative;
         font-size: 18px;
         font-family: $main-font;
         color: #fff;
